BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Best_Time_BMS_CN__c.object
<CustomObject>
    <fields>
        <fullName>Account_CN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Best Time</relationshipLabel>
        <relationshipName>Best_Time</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Time_CN__c</fullName>
        <label>End Time</label>
        <picklist>
            <picklistValues>
                <fullName>0:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Start_Time_CN__c</fullName>
        <label>Start Time</label>
        <picklist>
            <picklistValues>
                <fullName>0:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Week_Day_CN__c</fullName>
        <label>Week Day</label>
        <picklist>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Best Time</label>
    <nameField>
        <displayFormat>BTN-{000000}</displayFormat>
        <label>Best Time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Best Time</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>